<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chinh_thuc.Register">

    <EditText
        android:id="@+id/name"
        android:layout_width="265dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:hint="@string/name_register" />

    <EditText
        android:id="@+id/password"
        android:layout_width="265dp"
        android:layout_height="59dp"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:hint="@string/pass_register" />

    <EditText
        android:id="@+id/emailKP"
        android:layout_width="265dp"
        android:layout_height="59dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:hint="@string/emailKP" />

    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="62dp"
        android:layout_below="@+id/emailKP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/regis_btn" />
</RelativeLayout>