<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_centerVertical="true"
        android:layout_width="265dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:layout_marginTop="51dp"
        android:hint="@string/prompt_email"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="265dp"
        android:layout_height="59dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="154dp"
        android:hint="@string/prompt_password" />

    <Button
        android:id="@+id/login"
        android:layout_width="122dp"
        android:layout_height="61dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="217dp"
        android:layout_marginRight="217dp"
        android:layout_marginTop="62dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/Register"
        android:text="@string/regis_btn"
        android:layout_width="122dp"
        android:layout_height="61dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/password"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginTop="62dp" />

    <TextView
        android:id="@+id/nof_login"
        android:layout_width="395dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="163dp"
        android:gravity="center"
        android:text="@string/md_nof_login" />
</RelativeLayout>